guestbook/guestbook-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /guest
        pathType: Prefix
        backend:
         service:
            name: guestbook-ui
            port:
              number: 80
